fixed text alignment in work-item

--- a/style.css
+++ b/style.css
@@ -481,6 +481,7 @@ body {
 }
 
 .work-item-description {
+    text-align: left;
     opacity: 0;
     position: absolute;
     bottom: 2px;
